--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/postdb
+spring.datasource.username=root
+spring.datasource.password=sapassword
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
